--- a/app/src/main/res/layout/old_activity_register_car.xml
+++ b/app/src/main/res/layout/old_activity_register_car.xml
@@ -38,7 +38,7 @@
         tools:layout_editor_absoluteY="199dp" />
 
     <EditText
-        android:id="@+id/etCarModel"
+        android:id="@+id/etCarculatorModel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/etCarMake"
@@ -94,7 +94,7 @@
         android:id="@+id/etYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etCarModel"
+        android:layout_below="@+id/etCarculatorModel"
         android:layout_alignStart="@+id/tvYear"
         android:layout_marginStart="90dp"
         android:layout_marginTop="0dp"
@@ -130,7 +130,7 @@
         android:textSize="14sp" />
 
     <EditText
-        android:id="@+id/etSizeType"
+        android:id="@+id/etCarculatorSizeType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/etPassengers"
@@ -145,7 +145,7 @@
         android:id="@+id/etDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etSizeType"
+        android:layout_below="@+id/etCarculatorSizeType"
         android:layout_alignStart="@+id/tvDescription"
         android:layout_marginStart="90dp"
         android:ems="10"
