--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -82,4 +82,15 @@
         android:layout_toEndOf="@+id/tvDetailRate"
         android:text="Carculator"
         android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/ibtnDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ibtnEvent"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="19dp"
+        app:tint="?attr/colorPrimary"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 </RelativeLayout>
