--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -17,7 +17,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="29dp"
             android:layout_marginTop="187dp"
-            android:text="Welcome back, "
+            android:text="Welcome, "
             android:textSize="35dp"
             android:textStyle="bold"></TextView>
 
