Added ripple animation to cards

--- a/app/src/main/res/layout/item_car.xml
+++ b/app/src/main/res/layout/item_car.xml
@@ -22,7 +22,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp">
+            android:padding="5dp"
+            android:foreground="?android:attr/selectableItemBackground">
 
             <TextView
                 android:id="@+id/tvCarListingName"
