--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -16,24 +16,26 @@
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize">
         <TextView
-            android:id="@+id/tvCarDetailName"
+            android:id="@+id/tvDetailMakeModelYear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="29dp"
             android:layout_marginTop="30dp"
-            android:text="Honda Odyssey 2007" />
+            android:text="Honda Odyssey 2007"
+            android:transitionName="makemodelyear"/>
 
         <TextView
             android:id="@+id/tvDetailRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvCarDetailName"
+            android:layout_below="@+id/tvDetailMakeModelYear"
             android:layout_alignParentStart="true"
             android:layout_marginStart="30dp"
             android:layout_marginTop="19dp"
-            tools:text="Rate" />
+            tools:text="Rate"
+            android:transitionName="rate"/>
 
         <TextView
             android:id="@+id/tvDetailDescription"
@@ -56,7 +58,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="20dp"
             android:scaleType="centerCrop"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            android:transitionName="image"/>
 
         <ImageButton
             android:id="@+id/ibtnEdit"
