--- a/app/src/main/res/layout/activity_carculator.xml
+++ b/app/src/main/res/layout/activity_carculator.xml
@@ -34,20 +34,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Make"
-                android:layout_marginBottom="10dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etCarculatorMake"
+                android:layout_marginBottom="10dp"
+                app:errorEnabled="true"
+                android:id="@+id/tilCarMake">
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/etCarculatorMake"
                     android:drawablePadding="0dp"
-                    tools:text="Toyota"></com.google.android.material.textfield.TextInputEditText>
+                    tools:text="Toyota"
+                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox">
+                </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:hint="Model">
+                android:hint="Model"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etCarculatorModel"
@@ -62,7 +66,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:hint="Year">
+                android:hint="Year"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etCarculatorYear"
@@ -77,7 +82,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:hint="Number of Passengers">
+                android:hint="Number of Passengers"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etCarculatorPassengers"
@@ -92,7 +98,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:hint="Size Type">
+                android:hint="Size Type"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etCarculatorSizeType"
@@ -107,7 +114,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:hint="Address">
+                android:hint="Address"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etCarculatorAddress"
