--- a/app/src/main/res/layout/activity_carculator.xml
+++ b/app/src/main/res/layout/activity_carculator.xml
@@ -153,6 +153,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 tools:text="Your recommended price is $60/day"></TextView>
