--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -49,7 +49,7 @@
 
         <ImageView
             android:id="@+id/ivDetailCar"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_below="@+id/tvDetailDescription"
             android:layout_alignParentStart="true"
@@ -58,8 +58,8 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="20dp"
             android:scaleType="centerCrop"
-            tools:srcCompat="@tools:sample/avatars"
-            android:transitionName="image"/>
+            android:transitionName="image"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <ImageButton
             android:id="@+id/ibtnEdit"
@@ -84,15 +84,5 @@
             app:srcCompat="@android:drawable/ic_menu_my_calendar"
             app:tint="?attr/colorPrimary" />
 
-        <ImageButton
-            android:id="@+id/ibtnDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ibtnEvent"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="19dp"
-            app:tint="?attr/colorPrimary"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
     </RelativeLayout>
 </RelativeLayout>
